@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Removed some non-ANSI-C strftime format strings ("%F") and
+  locale-dependent formats ("%c") from NSE scripts and libraries.
+  C99-specified %F was noticed by Alex Weber. [Daniel Miller]
+
 o [Zenmap] Added Polish translation by Jacek Wielemborek.
 
 o [NSE] Added http-coldfusion-subzero. It detects Coldfusion 9 and 10
